--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,27 @@
     word-break: break-word;
   }
 }
+@layer base {
+  button {
+    user-select: none;
+  }
+  address {
+    font-style: normal;
+  }
+
+  /* remove arrows from number input */
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  /* Firefox */
+  input[type='number'] {
+    appearance: textfield;
+    -moz-appearance: textfield;
+  }
+}
 
 :root {
   --nav-height: 6rem;
@@ -36,11 +57,65 @@
   }
 }
 
-button {
-  user-select: none;
+/*-----------
+    tooltip
+  -----------*/
+@layer components {
+  .tooltip-container:hover .tooltip:not(:hover),
+  .tooltip-container:hover .tooltip-hoverable {
+    @apply visible opacity-100 delay-300;
+  }
+  .tooltip {
+    --tooltip-position: calc(100% + 0.5rem);
+
+    @apply after:border-opacity-65 !important;
+  }
+
+  .tooltip.top,
+  .tooltip.tooltip.bottom {
+    @apply left-1/2 -translate-x-1/2 after:left-1/2 after:-translate-x-1/2;
+  }
+  .tooltip.top {
+    bottom: var(--tooltip-position);
+
+    @apply after:top-full after:border-t-zinc-600;
+  }
+  .tooltip.bottom {
+    top: var(--tooltip-position);
+
+    @apply after:bottom-full after:border-b-zinc-600;
+  }
+
+  .tooltip.left,
+  .tooltip.right {
+    @apply top-1/2 -translate-y-1/2 after:top-1/2 after:-translate-y-1/2;
+  }
+  .tooltip.left {
+    right: var(--tooltip-position);
+
+    @apply after:left-full after:border-l-zinc-600;
+  }
+  .tooltip.right {
+    left: var(--tooltip-position);
+
+    @apply after:right-full after:border-r-zinc-600;
+  }
 }
-address {
-  font-style: normal;
+
+/*----------------
+    custom input
+  ----------------*/
+@layer components {
+  .field-container label {
+    line-height: 1;
+  }
+  .field-container .field:focus + label,
+  .field-container .field:not(:placeholder-shown) + label {
+    @apply -top-2 border-b bg-white text-xs;
+  }
+  .field-container .field:focus + label {
+    @apply text-blue-400;
+  }
 }
 
 /*==========
@@ -49,33 +124,24 @@ address {
 .navbar::after {
   content: '';
 
-  position: absolute;
-  bottom: -1px;
-  left: 50%;
-  transform: translateX(-50%);
-
-  height: 1px;
   width: calc(100% - 2rem);
   max-width: 77.5rem;
-  background-color: rgba(0, 0, 0, 0.1);
+
+  @apply absolute -bottom-px left-1/2 h-px -translate-x-1/2 bg-black bg-opacity-10;
 }
 .navbar__search::before {
   content: '';
 
-  display: flex;
+  background-image: url('/icons/search.svg');
 
-  position: absolute;
-  left: 0.75rem;
-  top: 50%;
-  transform: translateY(-50%);
-
-  width: 1.5rem;
-  height: 1.5rem;
+  @apply absolute left-3 top-1/2 flex size-6 -translate-y-1/2 bg-center bg-no-repeat opacity-40;
+}
+.navbar__search::before {
+  content: '';
 
   background-image: url('/icons/search.svg');
-  background-repeat: no-repeat;
-  background-position: center;
-  opacity: 0.4;
+
+  @apply absolute left-3 top-1/2 flex size-6 -translate-y-1/2 bg-center bg-no-repeat opacity-40;
 }
 
 /*===========
