Replaced SVGs with lucide icons. Errors fix
Some errors occurred due to updating Next from 14 to 15 version. Updated the code to meet the Next 15 requirements.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -156,6 +156,19 @@
   }
 }
 
+/*=========================
+    icons as a background
+  =========================*/
+.google-icon {
+  background-image: url('/icons/socials/google.svg');
+}
+.facebook-icon {
+  background-image: url('/icons/socials/facebook.svg');
+}
+.apple-icon {
+  background-image: url('/icons/socials/apple.svg');
+}
+
 /*==========
     navbar
   ==========*/
