Finish components for services. Fix styles for option buttons. Add enhanced sensors for dnd.
Now additional services can be added, deleted, edited and reordered correctly.
On mobile devices buttons inside options were invisible. Now they are visible by default for these devices.
Created sensor classes that extend default sensor classes, but can ignore elements with data attribute 'data-no-dnd' to prevent dragging by clicking on these elements.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,6 +31,12 @@
   .line-h-1 {
     line-height: 1;
   }
+
+  @media (hover: none) {
+    .not-hoverable-opacity-100 {
+      @apply opacity-100;
+    }
+  }
 }
 
 @layer base {
@@ -329,6 +335,11 @@
   @apply border border-white border-b-gray-400 border-r-gray-400 bg-white;
 }
 
+@media (hover: none) {
+  .option__button {
+    @apply opacity-100;
+  }
+}
 
 @keyframes showOptionDetails {
   0% {
