Add an image preview and image removing for ImageDropzone.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,6 +73,13 @@
   }
 }
 
+/*----------
+    swiper
+  ----------*/
+.swiper-pagination-bullet {
+  cursor: pointer;
+}
+
 /*---------------
     phone input
   ---------------*/
